crates/internal/brink-test-harness/tests/snapshots/oracle_snapshots__tier3__strings__I049-strings-in-choices.snap
---
source: crates/internal/brink-test-harness/tests/oracle_snapshots.rs
expression: case_snapshot
---
case: tier3/strings/I049-strings-in-choices
oracle: 1, brink: 1, matched: 1
passing: 1/1

=== episode [0] === PASS
> "" [Choices: "test1 \"test2 test3\"" (0) -> 0]
> "test1 test4\n" [Done]
outcome: Done
