crates/internal/brink-test-harness/tests/snapshots/oracle_snapshots__tier3__strings__I052-string-type-coercion.snap
---
source: crates/internal/brink-test-harness/tests/oracle_snapshots.rs
expression: case_snapshot
---
case: tier3/strings/I052-string-type-coercion
oracle: 1, brink: 1, matched: 1
passing: 1/1

=== episode [] === PASS
> "same\n" [Continue]
> "different\n" [Done]
outcome: Done
