crates/internal/brink-test-harness/tests/snapshots/oracle_snapshots__tier3__strings__basic-string-literals.snap
---
source: crates/internal/brink-test-harness/tests/oracle_snapshots.rs
expression: case_snapshot
---
case: tier3/strings/basic-string-literals
oracle: 1, brink: 1, matched: 1
passing: 1/1

=== episode [] === PASS
> "Hello world 1\n" [Continue]
> "Hello world 2.\n" [Done]
outcome: Done
