crates/internal/brink-test-harness/tests/snapshots/oracle_snapshots__tier3__strings__literal-unary.snap
---
source: crates/internal/brink-test-harness/tests/oracle_snapshots.rs
expression: case_snapshot
---
case: tier3/strings/literal-unary
oracle: 1, brink: 1, matched: 1
passing: 1/1

=== episode [] === PASS
> "-1\n" [Continue]
> "false\n" [Continue]
> "true\n" [Done]
outcome: Done
